--- a/main.html
+++ b/main.html
@@ -149,7 +149,7 @@
 			}	
 
 		</style>
-		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>		
+		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>		
 		<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
